# graph-of-thoughts

./: .gitignore  README.md  pyproject.toml  ruff.toml
eval/: light_perf_test.py  run_gbnf_conversation.py  stress_test.py
evaluation/: light_perf_test.py
graph_of_thoughts/: chat_manager.py  constants.py  context_manager.py  debug_llm_output.txt  debug_tools.py  default_experiment_data.json  evaluate_llm_graph.py  generate_normal_outputs.py  graph_components.py  graph_utils.py  main.py  models.py  poc_llm_self_graph.py  stress_test.py  structured_reasoning.py  stuffed_context_test.py  unified_llm.py  utils.py
tests/: conftest.py  test_chat_manager.py  test_context_manager.py  test_evaluate_llm_graph.py  test_graph_components.py  test_graph_utils.py  test_integration_llm_graph.py  test_utils.py
tests/fixtures/: graph_data.py  sample_data.py
tests/mocks/: mock_sentence_transformer.py
