[project]
name = "graph-of-thoughts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "llama-cpp-python>=0.3.7",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "sentence-transformers>=3.4.1",
    "transformers>=4.49.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
pytorch-triton-xpu = [
    { index = "pytorch-xpu", marker = "sys_platform == 'linux'" },
]

[tool.setuptools]
py-modules = ['graph_of_thoughts']

[dependency-groups]
dev = [
    "mypy>=1.15.0",
 "pytest>=8.3.4",
 "pytest-cov>=6.0.0",
 "ruff>=0.9.7",
]


[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true


# Pytest settings
[tool.pytest.ini_options]
addopts = "-svx"
testpaths = ["tests"]

# mypy settings
[tool.mypy]
ignore_missing_imports = true
strict = true
